k8s/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudcommerce-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cloudcommerce-mongo
  template:
    metadata:
      labels:
        app: cloudcommerce-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: cloudcommerce-mongo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: cloudcommerce-mongo
spec:
  selector:
    app: cloudcommerce-mongo
  ports:
    - port: 27017
      targetPort: 27017
